refactor(project): back to java